<resources>
    <string name="app_name">TvTransformer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaving_so_soon">Leaving so soon …?</string>
    <string name="leave_for_now">Leave for now</string>
    <string name="decline_exit">Decline</string>
    <string name="stay_and_continue">Stay &amp; Continue Watching</string>
    <string name="how_would_you_recommend_avengers_endgame_to_your_fellow_viewers">How would you recommend Avengers Endgame to your fellow viewers?</string>
    <string name="must_watch">Must Watch(Highly Recommended)</string>
    <string name="related_to_avengers_endgame">Related to Avengers Endgame</string>
    <string name="captured_moments">Captured Moments</string>
    <string name="one_time">One Time Watch</string>
    <string name="dont_watch">Don\'t Watch At All</string>
    <string name="set_screensaver">Set as screensaver on this TV</string>
    <string name="set_screebsaver_phone">Set as screensaver on my Glance phone</string>
    <string name="save_to_google_photos">Save to Google Photos</string>
</resources>