<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/iv_background"
            android:scaleType="centerCrop"
            android:background="@color/dialog_bg_black"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@drawable/side_panel"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/tv_must_watch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:background="@drawable/eula_pp_background_selector"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical | start"
                android:nextFocusDown="@id/rvRelated"
                android:paddingHorizontal="@dimen/dim_8"
                android:paddingVertical="@dimen/dim_8"
                android:text="@string/set_screensaver"
                android:textAllCaps="false"
                app:layout_constraintVertical_bias="0.65"
                android:textColor="@drawable/priming_exit_selector_text"
                app:layout_constraintBottom_toTopOf="@+id/tv_one_time"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/tv_one_time"
                app:layout_constraintEnd_toEndOf="@+id/tv_one_time"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/tv_one_time"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:background="@drawable/eula_pp_background_selector"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical | start"
                android:nextFocusDown="@id/rvRelated"
                android:paddingHorizontal="@dimen/dim_8"
                android:paddingVertical="@dimen/dim_8"
                android:text="@string/set_screebsaver_phone"
                android:textAllCaps="false"
                android:textColor="@drawable/priming_exit_selector_text"
                app:layout_constraintBottom_toTopOf="@+id/tv_dont_watch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_must_watch" />

            <Button
                android:id="@+id/tv_dont_watch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:background="@drawable/eula_pp_background_selector"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical | start"
                android:nextFocusDown="@id/rvRelated"
                android:paddingHorizontal="@dimen/dim_8"
                android:paddingVertical="@dimen/dim_8"
                android:text="@string/save_to_google_photos"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="@+id/tv_one_time"
                app:layout_constraintEnd_toEndOf="@+id/tv_one_time"
                android:textColor="@drawable/priming_exit_selector_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/tv_one_time" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>